# Keylo

./: .dockerignore  .env  .env.example  .env.local  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile-local  IMPROVEMENTS.md  LICENSE  README.md  audit.toml  docker-compose.dev.yml  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  release.yml
docs/: AGILEBOOT_INTEGRATION.md  API_REFERENCE.md  AUTH_RBAC_SECURITY_PLAN.md  END_TO_END_QUICKSTART.md  KEYLO_2_0_CLIENT_GUIDE.md  KEYLO_2_0_DEVELOPMENT_PLAN.md  KEYSTONE_AUTHZ_REPLACEMENT_AUDIT.md  KEYSTONE_KEYLO_2_0_MIGRATION.md  KEY_ROTATION.md  MULTI_CLIENT_RBAC_INTEGRATION.md  PRODUCTION_DEPLOYMENT.md  RELEASE_1_0.md  RELEASE_1_1.md  RELEASE_1_3.md  RELEASE_1_3_1.md  RELEASE_1_4.md  RELEASE_1_5.md  RELEASE_1_5_1.md  RELEASE_1_5_2.md  RELEASE_2_0.md  SECRET_ENCRYPTION.md  SETUP_WIZARD_DESIGN.md  THIRD_PARTY_INTEGRATION.md
docs/integrations/: README.md  go-net-http.md  node-express.md  rust-axum.md  spring-security.md
migrations/: 20260405120000_create_schema.sql  20260405190000_add_audit_logs.sql  20260408000000_add_service_clients.sql  20260416000000_add_is_admin_client.sql  20260416110000_add_external_user_mappings.sql  20260422130000_add_performance_indexes.sql  20260503035000_add_token_hash_columns.sql  20260503113000_allow_null_plaintext_token_columns.sql  20260503115500_drop_plaintext_token_columns.sql  20260515160000_extend_service_clients_integration_metadata.sql  20260516100000_add_identity_sources.sql  20260516113000_add_system_settings.sql  20260606090000_keylo_2_0_principals_resources.sql  20260606100000_add_refresh_sessions.sql  20260606110000_add_resource_metadata.sql  20260606120000_add_refresh_session_client_metadata.sql
migrations/20260405120000_create_schema/: down.sql  up.sql
migrations/20260405190000_add_audit_logs/: up.sql
scripts/: install-hooks.ps1  install-hooks.sh  pre-commit.hook  run_tests.ps1  run_tests.sh  secret_tool.py
src/: config.rs  errors.rs  lib.rs  main.rs  startup.rs  state.rs  utils.rs
src/db/: identity.rs  mod.rs  oauth.rs  principal.rs  rbac.rs  refresh_session.rs  resource.rs  (+3 more)
tests/: database_integration_test.rs  integration_test.rs  load_test.rs  oauth_integration_test.rs  rbac_integration_test.rs  user_integration_test.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
(+35 files in other folders)
