[package]
name = "keylo"
version = "1.2.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "keylo"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["typed-header"] }
http = "1.0.0"
oauth2 = "5"
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.51", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
chrono = "0.4"
uuid = { version = "1.23", features = ["v4"] }
urlencoding = "2.1"
bcrypt = "0.19"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
tower-http = { version = "0.6", features = ["trace", "cors"] }
redis = { version = "1.2", features = ["tokio-comp"] }
# Force patched version of rustls-webpki to fix RUSTSEC-2026-0104
rustls-webpki = "=0.103.13"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum-test = "19.0.0"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
